--- a/bower.json
+++ b/bower.json
@@ -1,23 +1,27 @@
 {
-  "name": "pubnub-element",
-  "version": "0.0.1",
-  "authors": [
-    "Larry Wu <lw7360@gmail.com>"
-  ],
-  "description": "A Polymer Element for PubNub.",
-  "keywords": ["PubNub", "Polymer", "web-components"],
-  "main": "pubnub-element.html",
-  "license": "MIT",
-  "homepage": "https://github.com/pubnub/pubnub-polymer",
-  "ignore": [
-    "**/.*",
-    'node_modules',
-    'bower_components',
-    'test',
-    'tests'
-  ],
-  "dependencies": {
-    "polymer": "Polymer/polymer",
-    "platform": "Polymer/platform"
-  }
+    "name": "pubnub-element",
+    "version": "0.0.1",
+    "authors": [
+        "Larry Wu <lw7360@gmail.com>"
+    ],
+    "description": "A Polymer Element for PubNub.",
+    "keywords": [
+        "PubNub",
+        "Polymer",
+        "web-components"
+    ],
+    "main": "pubnub-element.html",
+    "license": "MIT",
+    "homepage": "https://github.com/pubnub/pubnub-polymer",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "polymer": "Polymer/polymer",
+        "platform": "Polymer/platform"
+    }
 }
