--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,10 @@
     "name": "pubnub-element",
     "version": "3.6.7",
     "authors": [
+    	"PubNub",
         "Larry Wu <lw7360@gmail.com>"
     ],
-    "description": "A Polymer Element for PubNub.",
+    "description": "A Custom element to connect PubNub data stream.",
     "keywords": [
         "PubNub",
         "Polymer",
