--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
         "Larry Wu <lw7360@gmail.com>",
         "Kevin Gleason <kaagleason@gmail.com>"
     ],
-    "description": "A Custom element to connect PubNub data stream.",
+    "description": "A Polymer element to connect PubNub data stream.",
     "keywords": [
         "PubNub",
         "Polymer",
@@ -15,15 +15,12 @@
     "main": "pubnub-element.html",
     "license": "MIT",
     "homepage": "https://github.com/pubnub/pubnub-polymer",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
+    "ignore": [],
     "dependencies": {
-        "polymer": "Polymer/polymer",
-        "platform": "Polymer/platform"
+        "polymer": "Polymer/polymer#^1.1.0"
+    },
+    "devDependencies": {
+        "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
+        "iron-component-page": "PolymerElements/iron-component-page#^1.0.0"
     }
 }
