--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
     "name": "pubnub-element",
-    "version": "4.0.1",
+    "version": "4.1.0",
     "authors": [
     	"PubNub",
         "Larry Wu <lw7360@gmail.com>",
-        "Kevin Gleason <kaagleason@gmail.com>"
+        "Kevin Gleason <kaagleason@gmail.com>",
+        "Iegor Azuaga <dextrackmedia@gmail.com>"
     ],
     "description": "A Polymer element to connect PubNub data stream.",
     "keywords": [
