--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     },
     "devDependencies": {
         "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
-        "iron-component-page": "PolymerElements/iron-component-page#^1.0.0"
+        "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+        "web-component-tester": "*",
+        "test-fixture": "PolymerElements/test-fixture#^1.0.0"
     }
 }
