--- a/bower.json
+++ b/bower.json
@@ -1,29 +1,33 @@
 {
-    "name": "pubnub-element",
-    "version": "4.0.1",
-    "authors": [
-    	"PubNub",
-        "Larry Wu <lw7360@gmail.com>",
-        "Kevin Gleason <kaagleason@gmail.com>"
-    ],
-    "description": "A Custom element to connect PubNub data stream.",
-    "keywords": [
-        "PubNub",
-        "Polymer",
-        "web-components"
-    ],
-    "main": "pubnub-element.html",
-    "license": "MIT",
-    "homepage": "https://github.com/pubnub/pubnub-polymer",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-        "polymer": "Polymer/polymer",
-        "platform": "Polymer/platform"
-    }
+  "name": "pubnub-element",
+  "version": "4.0.2",
+  "authors": [
+    "PubNub",
+    "Larry Wu <lw7360@gmail.com>",
+    "Kevin Gleason <kaagleason@gmail.com>",
+    "Miguel Ortega Moreno <miguel.ortega.moreno5@gmail.com>"
+  ],
+  "description": "A Custom element to connect PubNub data stream.",
+  "keywords": [
+    "PubNub",
+    "Polymer",
+    "web-components"
+  ],
+  "main": "pubnub-element.html",
+  "license": "MIT",
+  "homepage": "https://github.com/pubnub/pubnub-polymer",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "polymer": "Polymer/polymer#^1.2.0"
+  },
+  "devDependencies": {
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+    "web-component-tester": "^3.4.0"
+  }
 }
